docs: 向量检索基准记录(recall/QPS/规模交叉点)